bubba-backend (2.2.6) vincent hugo; urgency=low

  * Update WEP and WPA default password to ExcitoSweden!

 -- Carl Fürstenberg <carl@excito.com>  Tue, 22 Mar 2011 15:05:24 +0100

bubba-backend (2.2.5) vincent hugo; urgency=low

  * Reenable apt preferences again, with right origin on 
    upstream

 -- Tor Krill <tor@excito.com>  Thu, 11 Nov 2010 09:36:09 +0100

bubba-backend (2.2.4) vincent hugo; urgency=low

  * Fix severity level on notification to let it show in UI
  * Change change_distribution to not modify apt preferences 

 -- Tor Krill <tor@excito.com>  Tue, 02 Nov 2010 11:19:50 +0100

bubba-backend (2.2.3) vincent hugo; urgency=low

  * Added postinst message for easyfind domain change.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Nov 2010 09:50:06 +0100

bubba-backend (2.2.2) vincent hugo; urgency=low

  * Change postfix conf once more. 

 -- Tor Krill <tor@excito.com>  Mon, 01 Nov 2010 16:21:12 +0100

bubba-backend (2.2.1) vincent hugo; urgency=low

  * Fix "faulty" postfix conf (Closes: #1595)  

 -- Tor Krill <tor@excito.com>  Thu, 28 Oct 2010 14:17:08 +0200

bubba-backend (2.2.0) hugo vincent; urgency=low

  * Fixed restore settings. (Closes: #1598)

 -- PA Nilsson <pa@excito.com>  Thu, 28 Oct 2010 11:07:36 +0200

bubba-backend (2.1~pre66) vincent hugo; urgency=low

  * Make sure cronfile has sane permissions (closes #1591) 

 -- Tor Krill <tor@excito.com>  Tue, 26 Oct 2010 11:19:20 +0200

bubba-backend (2.1~pre65) vincent hugo; urgency=low

  * Removed unused sub routines.

 -- PA Nilsson <pa@excito.com>  Thu, 21 Oct 2010 15:39:19 +0200

bubba-backend (2.1~pre64) vincent hugo; urgency=low

  * Easyfind updates 
  * 

 -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 12:07:11 +0200

bubba-backend (2.1~pre63) lucid; urgency=low

  * First draft of easyfind backend. 

 -- PA Nilsson <pa@excito.com>  Fri, 01 Oct 2010 15:03:26 +0200

bubba-backend (2.1~pre62) vincent hugo; urgency=low

  * Use right distributions. 
