@@ -91,12 +91,6 @@ case "$1" in
 		cp /usr/share/bubba-backend/auth_template.xml /etc/bubba_auth.xml;
 	fi
 
-	# Move startup of mediatomb to somewhat later due to ifplugd
-	if dpkg --compare-versions "$2" lt 1.3; then
-		update-rc.d -f mediatomb remove
-		update-rc.d mediatomb defaults 26 14
-	fi
-
 	# Old wizard created localtime to utilize TAI instead of UTC
 	if dpkg --compare-versions "$2" lt 1.3; then
 		if readlink -fn /etc/localtime | grep -q '/right/'; then
