@@ -27,7 +27,7 @@ Depends: ${misc:Depends}, bubba,
  file,
  filetransferdaemon,
  mt-daapd,
- mediatomb-daemon,
+ minidlna,
  zip,
  udev,
  avahi-daemon,
