@@ -417,8 +417,8 @@ function restart_network($interface){
 		if(query_service("mt-daapd")){
 			restart_service("mt-daapd");
 		}  
-		if(query_service("mediatomb")){
-			restart_service("mediatomb");
+		if(query_service("minidlna")){
+			restart_service("minidlna");
 		}
 	}
 }
