@@ -199,7 +199,7 @@ sub Run($) {
 					[ 'cron', '/etc/init.d/cron' ],
 					[ 'squeezecenter', '/etc/init.d/squeezecenter' ],
 					[ 'mt-daapd', '/etc/init.d/mt-daapd' ],
-					[ 'mediatomb', '/etc/init.d/mediatomb' ],
+					[ 'minidlna', '/etc/init.d/minidlna' ],
 					[ 'proftpd', '/etc/init.d/proftpd' ],
 					[ 'netatalk', '/etc/init.d/netatalk' ],
 					[ 'cups', '/etc/init.d/cupsys' ],
@@ -751,7 +751,7 @@ sub Run($) {
 					[ 'cron', '/etc/init.d/cron' ],
 					[ 'squeezecenter', '/etc/init.d/squeezecenter' ],
 					[ 'mt-daapd', '/etc/init.d/mt-daapd' ],
-					[ 'mediatomb', '/etc/init.d/mediatomb' ],
+					[ 'minidlna', '/etc/init.d/minidlna' ],
 					[ 'proftpd', '/etc/init.d/proftpd' ],
 					[ 'netatalk', '/etc/init.d/netatalk' ],
 					[ 'cups', '/etc/init.d/cupsys' ],
